@@ -65,11 +65,6 @@
 /* Define to 1 if you have the <sys/socket.h> header file. */
 #undef HAVE_SYS_SOCKET_H
 
-/* Default value for job's --wait-all-nodes option */
-#ifndef DEFAULT_WAIT_ALL_NODES
-#define DEFAULT_WAIT_ALL_NODES 0	/* don't wait */
-#endif
-
 #ifdef __cplusplus
 extern "C" {
 #endif
