@@ -1138,7 +1138,7 @@ static int _wait_nodes_ready(resource_allocation_response_msg_t *alloc)
 	if (alloc->alias_list && !xstrcmp(alloc->alias_list, "TBD"))
 		opt.wait_all_nodes = 1;	/* Wait for boot & addresses */
 	if (opt.wait_all_nodes == (uint16_t) NO_VAL)
-		opt.wait_all_nodes = DEFAULT_WAIT_ALL_NODES;
+		opt.wait_all_nodes = 0;
 
 	for (i=0; (cur_delay < max_delay); i++) {
 		if (i) {
